--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.2.1",
     "ethers": "^5.0.24",
-    "hardhat": "^2.0.8",
+    "hardhat": "^2.6.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.3.0",
     "@tenderly/hardhat-tenderly": "^1.0.6",
+    "@uniswap/v3-core": "^1.0.0",
+    "@uniswap/v3-periphery": "^1.2.1",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.20"
